@@ -60,6 +60,9 @@ Other Changes:
   resizing the parent window while keeping the multi-line field active (which is
   most typically achieved when resizing programmatically or via a docking layout
   reacting to a platform window resize). (#3237, #9007) [@anton-kl, @ocornut]
+- Textures:
+  - Fixed an issue preventing multi-contexts from using each others' fonts
+    if context 2 runs after context 1's Render() function. (#9039)
 - MultiSelect: added ImGuiMultiSelectFlags_NoSelectOnRightClick to disable default
   right-click processing, which selects item on mouse down and is designed for
   context-menus. (#8200, #9015)
